Getting Header done
Navigation bar added, background fullscreen with caption added

--- a/index.html
+++ b/index.html
@@ -28,5 +28,52 @@
         <!-- Custom JScr -->
         <script src="js/script.js"></script>
     </body>
-    
+    <header>
+            <nav id="sticky-navbar" class="navbar navbar-inverse navbar-static-top">
+                <div class="container navigation-bar">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#wrapper">
+                        </a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#wrapper" class="active">Home</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Sign up</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <!--/.nav-collapse -->
+                </div>
+                <!--/.container -->
+            </nav>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-7 title-container">
+                        <div class="title-text">
+                            <h1>Hello World! <br> We are <span>TestTask</span>,
+                                we make art.</h1>
+                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+                                elit,
+                                eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor
+                                at
+                                sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                        </div>
+                        <!--/.title-text -->
+                    </div>
+                    <!--/.title-container -->
+                </div>
+                <!--/.row -->
+            </div>
+            <!--/.container-fluid -->
+    </header>
+
+
     </html>
