Services All set
Adding services plus minor errors fixed

--- a/index.html
+++ b/index.html
@@ -17,63 +17,149 @@
 
 <body>
     <div id="wrapper">
-
-
-        </div><!-- /#wrapper -->
-        <!-- SCRIPTS -->
-        <!-- jQuery -->
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <!-- Bootstrap's JS -->
-        <script src="js/bootstrap.min.js"></script>
-        <!-- Custom JScr -->
-        <script src="js/script.js"></script>
-    </body>
     <header>
-            <nav id="sticky-navbar" class="navbar navbar-inverse navbar-static-top">
-                <div class="container navigation-bar">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#wrapper">
-                        </a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#wrapper" class="active">Home</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Sign up</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div>
-                    <!--/.nav-collapse -->
+        <nav id="sticky-navbar" class="navbar navbar-inverse navbar-static-top">
+            <div class="container navigation-bar">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#wrapper">
+                    </a>
                 </div>
-                <!--/.container -->
-            </nav>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-7 title-container">
-                        <div class="title-text">
-                            <h1>Hello World! <br> We are <span>TestTask</span>,
-                                we make art.</h1>
-                            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
-                                elit,
-                                eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor
-                                at
-                                sem. Mauris blandit aliquet elit, eget tincidunt.</p>
-                        </div>
-                        <!--/.title-text -->
-                    </div>
-                    <!--/.title-container -->
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#wrapper" class="active">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
                 </div>
-                <!--/.row -->
+                <!--/.nav-collapse -->
             </div>
-            <!--/.container-fluid -->
+            <!--/.container -->
+        </nav>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-7 title-container">
+                    <div class="title-text">
+                        <h1>Hello World! <br> We are <span>TestTask</span>,
+                            we make art.</h1>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+                            elit,
+                            eget tincidunt nibh pulvinar a. Curabitur aliquet quam. Accumsan id imperdiet et, porttitor
+                            at
+                            sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                    </div>
+                    <!--/.title-text -->
+                </div>
+                <!--/.title-container -->
+            </div>
+            <!--/.row -->
+        </div>
+        <!--/.container-fluid -->
     </header>
+    <main>
+        <section id="services">
+            <div class="container">
+                <div class="col-md-12 text-center section-title">
+                    <h1>Services</h1>
+                    <div class="divider">
+                        <div class="dividermask"></div><span><i></i></span>
+                    </div>
+                    <!--/.divider -->
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+                        blandit aliquet elit, eget tincidunt.</p>
+                </div>
+                <!--/.section-title -->
+                <div class="row services-grid">
+                    <div class="col-md-6">
+                        <div class="service-box">
+                            <div class="row">
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon.svg" alt=""></div>
+                                <div class="service-text col-md-9">
+                                    <h1>Vorem amet intuitive</h1>
+                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
+                                        sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar
+                                        a. Curabitur aliquet quam.</p>
+                                </div>
+                                <!--/.service-text -->
+                            </div>
+                            <!--/.row -->
+                        </div>
+                        <!--/.service-box -->
+                    </div>
+                    <!--/.col-md-6 -->
+                    <div class="col-md-6">
+                        <div class="service-box">
+                            <div class="row">
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon (2).svg" alt=""></div>
+                                <div class="service-text col-md-9">
+                                    <h1>Vorem amet intuitive</h1>
+                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
+                                        sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar
+                                        a. Curabitur aliquet quam.</p>
+                                </div>
+                                <!--/.service-text -->
+                            </div>
+                            <!--/.row -->
+                        </div>
+                        <!--/.service-box -->
+                    </div>
+                    <!--/.col-md-6 -->
+                    <div class="col-md-6">
+                        <div class="service-box">
+                            <div class="row">
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon (1).svg" alt=""></div>
+                                <div class="service-text col-md-9">
+                                    <h1>Vorem amet intuitive</h1>
+                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
+                                        sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar
+                                        a. Curabitur aliquet quam.</p>
+                                </div>
+                                <!--/.service-text -->
+                            </div>
+                            <!--/.row -->
+                        </div>
+                        <!--/.service-box -->
+                    </div>
+                    <!--/.col-md-6 -->
+                    <div class="col-md-6">
+                        <div class="service-box">
+                            <div class="row">
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon (3).svg" alt=""></div>
+                                <div class="service-text col-md-9">
+                                    <h1>Vorem amet intuitive</h1>
+                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
+                                        sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar
+                                        a. Curabitur aliquet quam.</p>
+                                </div>
+                                <!--/.service-text -->
+                            </div>
+                            <!--/.row -->
+                        </div>
+                        <!--/.service-box -->
+                    </div>
+                    <!--/.col-md-6 -->
+                </div>
+                <!--/.services grid -->
+            </div>
+            <!--/.container -->
+        </section>
+        <!--/#services -->
+        </main>
+    </div><!-- /#wrapper -->
+    <!-- SCRIPTS -->
+    <!-- jQuery -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap's JS -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Custom JScr -->
+    <script src="js/script.js"></script>
+</body>
 
-
-    </html>
+</html>
