Background w/ text section
This one done as well

--- a/index.html
+++ b/index.html
@@ -151,6 +151,24 @@
             <!--/.container -->
         </section>
         <!--/#services -->
+        <section id="bg-text">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="bg-text text-center">
+                                <h1>32“ACCUMSAN ID CURABITUR ET PORTITOR MAURIS BLANDIT DOLOR LOREM SOME
+                                    EST OUR DONEC STIN LORTIOS”</h1>
+                                <p>John Doe</p>
+                            </div>
+                            <!--/.bg-text -->
+                        </div>
+                        <!--/.col-md-12 -->
+                    </div>
+                    <!--/.row -->
+                </div>
+                <!--/.container-fluid -->
+            </section>
+                    <!--/#bg-text -->
         </main>
     </div><!-- /#wrapper -->
     <!-- SCRIPTS -->
