--- a/index.html
+++ b/index.html
@@ -169,6 +169,55 @@
                 <!--/.container-fluid -->
             </section>
                     <!--/#bg-text -->
+                    <section id="contact">
+                            <div class="container">
+                                <div class="col-md-12 text-center section-title">
+                                    <h1>Contact us</h1>
+                                    <div class="divider">
+                                        <div class="dividermask"></div><span><i></i></span>
+                                    </div>
+                                    <!--/.divider -->
+                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+                                        blandit aliquet elit, eget tincidunt.</p>
+                                </div>
+                                <!--/.section-title -->
+                                <div class="row">
+                                    <div class="col-lg-8 col-md-12 contacts">
+                                            <div class="form-area">  
+                                                    <form role="form">
+                                                                <div class="form-group">
+                                                                    <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
+                                                                </div>
+                                                                <div class="form-group">
+                                                                    <input type="text" class="form-control" id="email" name="email" placeholder="Your mail" required>
+                                                                </div>
+                                                                <div class="form-group">
+                                                                <textarea class="form-control" type="textarea" id="message" placeholder="Your message" maxlength="140" rows="7"></textarea>
+                                                                </div>
+                                                    <button type="button" id="submit" name="submit" class="btn pull-right">Send message</button>
+                                                    </form>
+                                                </div> <!--/.form-area -->
+                                    </div> <!--/.col-md-8 -->
+                                    <div class="col-lg-4 col-md-12 contacts-info">
+                                        <div class="contact-details">
+                                            <h1>Get in touch</h1>
+                                            <a href="tel:+359884923477">
+                                            <p>+00 123456789</p></a>
+                                            <a href="tel:+359884923477"><p>+00 123456789</p></a>
+                                        </div> <!--/.contact-details -->
+                                        <div class="contact-location">
+                                                <h1>Where we are</h1>
+                                                <a href="https://www.google.bg/maps/place/%D0%B1%D1%83%D0%BB.+%E2%80%9E%D0%A6%D0%B0%D1%80+%D0%9E%D1%81%D0%B2%D0%BE%D0%B1%D0%BE%D0%B4%D0%B8%D1%82%D0%B5%D0%BB%E2%80%9C+109,+9000+%D0%92%D0%B0%D1%80%D0%BD%D0%B0+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D0%92%D0%B0%D1%80%D0%BD%D0%B0/@43.2153752,27.9066718,16z/data=!4m5!3m4!1s0x40a45471d2ae258f:0x1ca28e7702d71ce4!8m2!3d43.2166263!4d27.9103089" target="blank_"><p>Awesome Adress 17</p>
+                                                <p>New York, NYC</p>
+                                                <p>123-456-789</p>
+                                                <p>USA</p></a>
+                                            </div> <!--/.contact-location -->
+                                    </div> <!--/.col-md-4 -->
+                                </div> <!--/.row -->
+                            </div>
+                            <!--/.container -->
+                        </section>
+                        <!--/#contact -->
         </main>
     </div><!-- /#wrapper -->
     <!-- SCRIPTS -->
