--- a/index.html
+++ b/index.html
@@ -219,6 +219,28 @@
                         </section>
                         <!--/#contact -->
         </main>
+        <footer>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="footer-logo">
+                                <img src="img/logo.png" alt="Footer Logo">
+                            </div> <!--/.footer-logo -->
+                            <div class="socials text-center">
+                                <h1>We are social</h1>
+                                <hr>
+                                <p><i class="fab fa-facebook-f"></i>
+                                    <i class="fab fa-twitter"></i>
+                                    <i class="fab fa-google-plus-g"></i>
+                                    <i class="fas fa-basketball-ball"></i></p>
+                            </div>
+                            <div class="footer-credits text-center">
+                                <p>&copy; 2018 - <span>TestTask</span> All rights reserved</p>
+                            </div>
+                        </div> <!--/.col-md-12 -->
+                    </div> <!--/.row -->
+                </div> <!--/.container -->
+            </footer>
     </div><!-- /#wrapper -->
     <!-- SCRIPTS -->
     <!-- jQuery -->
