--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#wrapper" class="active">Home</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Sign up</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#wrapper" class="active">Home</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#bg-text">About</a></li>
+                                <li><a href="#">Sign up</a></li>
+                                <li><a href="#contact">Contact</a></li>
+                            </ul>
                 </div>
                 <!--/.nav-collapse -->
             </div>
