--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><embed src="img/icons/Icon.svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon.svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -97,7 +97,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><embed src="img/icons/Icon (2).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon (2).svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -114,7 +114,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><embed src="img/icons/Icon (1).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon (1).svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -131,7 +131,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><embed src="img/icons/Icon (3).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon (3).svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
