--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#wrapper">
+                    <a class="navbar-brand" href="#">
                     </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#wrapper" class="active">Home</a></li>
-                                <li><a href="#services">Services</a></li>
-                                <li><a href="#bg-text">About</a></li>
-                                <li><a href="#">Sign up</a></li>
-                                <li><a href="#contact">Contact</a></li>
-                            </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#wrapper" class="active">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#bg-text">About</a></li>
+                        <li><a href=".signUpModal" data-toggle="modal" data-target="#signUpModal">Sign up</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
                 </div>
                 <!--/.nav-collapse -->
             </div>
@@ -152,96 +152,129 @@
         </section>
         <!--/#services -->
         <section id="bg-text">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="bg-text text-center">
-                                <h1>32“ACCUMSAN ID CURABITUR ET PORTITOR MAURIS BLANDIT DOLOR LOREM SOME
-                                    EST OUR DONEC STIN LORTIOS”</h1>
-                                <p>John Doe</p>
-                            </div>
-                            <!--/.bg-text -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="bg-text text-center">
+                            <h1>32“ACCUMSAN ID CURABITUR ET PORTITOR MAURIS BLANDIT DOLOR LOREM SOME
+                                EST OUR DONEC STIN LORTIOS”</h1>
+                            <p>John Doe</p>
                         </div>
-                        <!--/.col-md-12 -->
+                        <!--/.bg-text -->
                     </div>
-                    <!--/.row -->
+                    <!--/.col-md-12 -->
                 </div>
-                <!--/.container-fluid -->
-            </section>
-                    <!--/#bg-text -->
-                    <section id="contact">
-                            <div class="container">
-                                <div class="col-md-12 text-center section-title">
-                                    <h1>Contact us</h1>
-                                    <div class="divider">
-                                        <div class="dividermask"></div><span><i></i></span>
-                                    </div>
-                                    <!--/.divider -->
-                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
-                                        blandit aliquet elit, eget tincidunt.</p>
-                                </div>
-                                <!--/.section-title -->
-                                <div class="row">
-                                    <div class="col-lg-8 col-md-12 contacts">
-                                            <div class="form-area">  
-                                                    <form role="form">
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" id="email" name="email" placeholder="Your mail" required>
-                                                                </div>
-                                                                <div class="form-group">
-                                                                <textarea class="form-control" type="textarea" id="message" placeholder="Your message" maxlength="140" rows="7"></textarea>
-                                                                </div>
-                                                    <button type="button" id="submit" name="submit" class="btn pull-right">Send message</button>
-                                                    </form>
-                                                </div> <!--/.form-area -->
-                                    </div> <!--/.col-md-8 -->
-                                    <div class="col-lg-4 col-md-12 contacts-info">
-                                        <div class="contact-details">
-                                            <h1>Get in touch</h1>
-                                            <a href="tel:+359884923477">
-                                            <p>+00 123456789</p></a>
-                                            <a href="tel:+359884923477"><p>+00 123456789</p></a>
-                                        </div> <!--/.contact-details -->
-                                        <div class="contact-location">
-                                                <h1>Where we are</h1>
-                                                <a href="https://www.google.bg/maps/place/%D0%B1%D1%83%D0%BB.+%E2%80%9E%D0%A6%D0%B0%D1%80+%D0%9E%D1%81%D0%B2%D0%BE%D0%B1%D0%BE%D0%B4%D0%B8%D1%82%D0%B5%D0%BB%E2%80%9C+109,+9000+%D0%92%D0%B0%D1%80%D0%BD%D0%B0+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D0%92%D0%B0%D1%80%D0%BD%D0%B0/@43.2153752,27.9066718,16z/data=!4m5!3m4!1s0x40a45471d2ae258f:0x1ca28e7702d71ce4!8m2!3d43.2166263!4d27.9103089" target="blank_"><p>Awesome Adress 17</p>
-                                                <p>New York, NYC</p>
-                                                <p>123-456-789</p>
-                                                <p>USA</p></a>
-                                            </div> <!--/.contact-location -->
-                                    </div> <!--/.col-md-4 -->
-                                </div> <!--/.row -->
-                            </div>
-                            <!--/.container -->
-                        </section>
-                        <!--/#contact -->
-        </main>
-        <footer>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="footer-logo">
-                                <img src="img/logo.png" alt="Footer Logo">
-                            </div> <!--/.footer-logo -->
-                            <div class="socials text-center">
-                                <h1>We are social</h1>
-                                <hr>
-                                <p><i class="fab fa-facebook-f"></i>
-                                    <i class="fab fa-twitter"></i>
-                                    <i class="fab fa-google-plus-g"></i>
-                                    <i class="fas fa-basketball-ball"></i></p>
-                            </div>
-                            <div class="footer-credits text-center">
-                                <p>&copy; 2018 - <span>TestTask</span> All rights reserved</p>
-                            </div>
-                        </div> <!--/.col-md-12 -->
-                    </div> <!--/.row -->
-                </div> <!--/.container -->
-            </footer>
-    </div><!-- /#wrapper -->
+                <!--/.row -->
+            </div>
+            <!--/.container-fluid -->
+        </section>
+                <!--/#bg-text -->
+<section class="signUpModal">
+    <div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <a class="close-modal" data-dismiss="modal"><img src="img/close.png" alt=""></a>
+
+        <div class="modal-dialog" role="document">
+
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="sign-up-title text-center"><h1>Sign up</h1></div>
+                    <form>
+                        <div class="form-group">
+                          <label for="email">your mail:</label>
+                          <input type="email" class="form-control" id="email" placeholder="your mail">
+                        </div>
+                        <div class="form-group">
+                                <label for="pwd">Password:</label>
+                                <input type="password" class="form-control" id="pwd" placeholder="password">
+                              </div>
+                              <div class="form-group">
+                                    <label for="pwd">Repeat password:</label>
+                                    <input type="password" class="form-control" id="pwd" placeholder="repeat password">
+                                  </div>
+                        <div class="checkbox">
+                                <input id="checkbox-1" type="checkbox">
+                                <label for="checkbox-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit</label>
+                        </div>
+                        <button type="submit" class="btn">Sign up</button>
+                      </form>
+            </div> <!--/.modal-body -->
+          </div> <!--/.modal-content -->
+        </div> <!--/.modal-dialog -->
+      </div> <!--/.modal -->
+    </section>
+        <section id="contact">
+            <div class="container">
+                <div class="col-md-12 text-center section-title">
+                    <h1>Contact us</h1>
+                    <div class="divider">
+                        <div class="dividermask"></div><span><i></i></span>
+                    </div>
+                    <!--/.divider -->
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
+                        blandit aliquet elit, eget tincidunt.</p>
+                </div>
+                <!--/.section-title -->
+                <div class="row">
+                    <div class="col-lg-8 col-md-12 contacts">
+                            <div class="form-area">  
+                                    <form role="form">
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" id="name" name="name" placeholder="Your name" required>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control" id="email" name="email" placeholder="Your mail" required>
+                                                </div>
+                                                <div class="form-group">
+                                                <textarea class="form-control" type="textarea" id="message" placeholder="Your message" maxlength="140" rows="7"></textarea>
+                                                </div>
+                                    <button type="button" id="submit" name="submit" class="btn pull-right">Send message</button>
+                                    </form>
+                                </div> <!--/.form-area -->
+                    </div> <!--/.col-md-8 -->
+                    <div class="col-lg-4 col-md-12 contacts-info">
+                        <div class="contact-details">
+                            <h1>Get in touch</h1>
+                            <a href="tel:+359884923477">
+                            <p>+00 123456789</p></a>
+                            <a href="tel:+359884923477"><p>+00 123456789</p></a>
+                        </div> <!--/.contact-details -->
+                        <div class="contact-location">
+                                <h1>Where we are</h1>
+                                <a href="https://www.google.bg/maps/place/%D0%B1%D1%83%D0%BB.+%E2%80%9E%D0%A6%D0%B0%D1%80+%D0%9E%D1%81%D0%B2%D0%BE%D0%B1%D0%BE%D0%B4%D0%B8%D1%82%D0%B5%D0%BB%E2%80%9C+109,+9000+%D0%92%D0%B0%D1%80%D0%BD%D0%B0+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D0%92%D0%B0%D1%80%D0%BD%D0%B0/@43.2153752,27.9066718,16z/data=!4m5!3m4!1s0x40a45471d2ae258f:0x1ca28e7702d71ce4!8m2!3d43.2166263!4d27.9103089" target="blank_"><p>Awesome Adress 17</p>
+                                <p>New York, NYC</p>
+                                <p>123-456-789</p>
+                                <p>USA</p></a>
+                            </div> <!--/.contact-location -->
+                    </div> <!--/.col-md-4 -->
+                </div> <!--/.row -->
+            </div>
+            <!--/.container -->
+        </section>
+        <!--/#contact -->
+    </main>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="footer-logo">
+                        <img src="img/logo.png" alt="Footer Logo">
+                    </div> <!--/.footer-logo -->
+                    <div class="socials text-center">
+                        <h1>We are social</h1>
+                        <hr>
+                        <p><i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-google-plus-g"></i>
+                            <i class="fas fa-basketball-ball"></i></p>
+                    </div>
+                    <div class="footer-credits text-center">
+                        <p>&copy; 2018 - <span>TestTask</span> All rights reserved</p>
+                    </div>
+                </div> <!--/.col-md-12 -->
+            </div> <!--/.row -->
+        </div> <!--/.container -->
+    </footer>
+</div><!-- /#wrapper -->
     <!-- SCRIPTS -->
     <!-- jQuery -->
     <script src="js/jquery-3.3.1.min.js"></script>
