--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="#wrapper">
                     </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
@@ -58,6 +58,7 @@
                     <!--/.title-text -->
                 </div>
                 <!--/.title-container -->
+                <div class="col-md-5"></div>
             </div>
             <!--/.row -->
         </div>
@@ -69,7 +70,7 @@
                 <div class="col-md-12 text-center section-title">
                     <h1>Services</h1>
                     <div class="divider">
-                        <div class="dividermask"></div><span><i></i></span>
+                        <div class="dividermask"></div><span></span>
                     </div>
                     <!--/.divider -->
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
@@ -97,7 +98,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon (2).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon%20(2).svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -114,7 +115,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon (1).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon%20(1).svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -131,7 +132,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon (3).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><img src="img/icons/Icon%20(3).svg" alt=""></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -207,7 +208,7 @@
                 <div class="col-md-12 text-center section-title">
                     <h1>Contact us</h1>
                     <div class="divider">
-                        <div class="dividermask"></div><span><i></i></span>
+                        <div class="dividermask"></div><span></span>
                     </div>
                     <!--/.divider -->
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris
@@ -225,7 +226,7 @@
                                                     <input type="text" class="form-control" id="email" name="email" placeholder="Your mail" required>
                                                 </div>
                                                 <div class="form-group">
-                                                <textarea class="form-control" type="textarea" id="message" placeholder="Your message" maxlength="140" rows="7"></textarea>
+                                                <textarea class="form-control" id="message" placeholder="Your message" maxlength="140" rows="7"></textarea>
                                                 </div>
                                     <button type="button" id="submit" name="submit" class="btn pull-right">Send message</button>
                                     </form>
@@ -235,15 +236,16 @@
                         <div class="contact-details">
                             <h1>Get in touch</h1>
                             <a href="tel:+359884923477">
-                            <p>+00 123456789</p></a>
-                            <a href="tel:+359884923477"><p>+00 123456789</p></a>
+                            +00 123456789</a><br>
+                            <a href="tel:+359884923477">+00 123456789</a>
                         </div> <!--/.contact-details -->
                         <div class="contact-location">
                                 <h1>Where we are</h1>
-                                <a href="https://www.google.bg/maps/place/%D0%B1%D1%83%D0%BB.+%E2%80%9E%D0%A6%D0%B0%D1%80+%D0%9E%D1%81%D0%B2%D0%BE%D0%B1%D0%BE%D0%B4%D0%B8%D1%82%D0%B5%D0%BB%E2%80%9C+109,+9000+%D0%92%D0%B0%D1%80%D0%BD%D0%B0+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D0%92%D0%B0%D1%80%D0%BD%D0%B0/@43.2153752,27.9066718,16z/data=!4m5!3m4!1s0x40a45471d2ae258f:0x1ca28e7702d71ce4!8m2!3d43.2166263!4d27.9103089" target="blank_"><p>Awesome Adress 17</p>
-                                <p>New York, NYC</p>
-                                <p>123-456-789</p>
-                                <p>USA</p></a>
+                                <a href="https://www.google.bg/maps/place/%D0%B1%D1%83%D0%BB.+%E2%80%9E%D0%A6%D0%B0%D1%80+%D0%9E%D1%81%D0%B2%D0%BE%D0%B1%D0%BE%D0%B4%D0%B8%D1%82%D0%B5%D0%BB%E2%80%9C+109,+9000+%D0%92%D0%B0%D1%80%D0%BD%D0%B0+%D0%A6%D0%B5%D0%BD%D1%82%D1%8A%D1%80,+%D0%92%D0%B0%D1%80%D0%BD%D0%B0/@43.2153752,27.9066718,16z/data=!4m5!3m4!1s0x40a45471d2ae258f:0x1ca28e7702d71ce4!8m2!3d43.2166263!4d27.9103089" target="blank_">
+                                    Awesome Adress 17<br>
+                                New York, NYC<br>
+                                123-456-789<br>
+                                USA</a>
                             </div> <!--/.contact-location -->
                     </div> <!--/.col-md-4 -->
                 </div> <!--/.row -->
