--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon.svg" alt=""></div>
+                                <div class="service-icon col-md-3"><span><img src="img/icons/Icon.svg" alt=""></span></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -98,7 +98,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon%20(2).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><span><img src="img/icons/Icon%20(2).svg" alt=""></span></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -115,7 +115,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon%20(1).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><span><img src="img/icons/Icon%20(1).svg" alt=""></span></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
@@ -132,7 +132,7 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><img src="img/icons/Icon%20(3).svg" alt=""></div>
+                                <div class="service-icon col-md-3"><span><img src="img/icons/Icon%20(3).svg" alt=""></span></div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
