--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                     <!--/.title-text -->
                 </div>
                 <!--/.title-container -->
-                <div class="col-md-5"></div>
             </div>
             <!--/.row -->
         </div>
@@ -81,7 +80,9 @@
                     <div class="col-md-6">
                         <div class="service-box">
                             <div class="row">
-                                <div class="service-icon col-md-3"><span><img src="img/icons/Icon.svg" alt=""></span></div>
+                                <div class="service-icon col-md-3"><span>
+                                    <img src="img/icons/Icon.svg" alt=""></span>
+                                </div>
                                 <div class="service-text col-md-9">
                                     <h1>Vorem amet intuitive</h1>
                                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at
